Some updates to make it work for new `ui5-middleware-cfdestination``
* `welcomeFile` can be optionally disabled
* support for authentication of UI5 server html pages
* some cleanup in the docu
* update `xs-security.json` to support login redirect for 8080

--- a/app/ui5.yaml
+++ b/app/ui5.yaml
@@ -28,10 +28,12 @@ server:
       configuration:
         debug: false
         authenticationMethod: route
+        appendAuthRoute: true
         allowServices: true
         allowLocalDir: true
         port: 5005
         xsappJson: xs-app.json
+        disableWelcomeFile: true
         destinations:
           - name: srv-api
             url: http://localhost:4004
