--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@prettier/plugin-xml": "^3.1.1",
     "@sap/eslint-plugin-cds": "^2.6.3",
+    "cds-plugin-ui5": "^0.5.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard": "^17.0.0",
