Usage of `cds-plugin-ui5` and `cfdestination` on local CF dev

--- a/app/ui5.yaml
+++ b/app/ui5.yaml
@@ -3,6 +3,9 @@ metadata:
   name: sample.ui5.uaa.ui
 type: application
 
+customConfiguration:
+  mountPath: /
+
 framework:
   name: SAPUI5
   version: '1.117.1'
