Usage of UI5 app in nested structure with UAA

--- a/app/webapp/manifest.json
+++ b/app/webapp/manifest.json
@@ -16,7 +16,7 @@
     },
     "dataSources": {
       "mainService": {
-        "uri": "/ci/",
+        "uri": "ci/",
         "type": "OData",
         "settings": {
           "odataVersion": "4.0"
