--- a/package.json
+++ b/package.json
@@ -8,7 +8,18 @@
     "build": "mbt build --mtar build.mtar",
     "deploy": "cf deploy ./mta_archives/build.mtar --version-rule ALL"
   },
+  "devDependencies": {
+    "@prettier/plugin-xml": "^3.2.1",
+    "@sap/eslint-plugin-cds": "^2.6.3",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-sonarjs": "^0.21.0",
+    "prettier": "^3.0.3"
+  },
   "workspaces": [
-    "frontend", "backend"
+    "app",
+    "backend"
   ]
 }
